couchebase cluster eklendi.

--- a/src/EventSourcing.TaskApp/appsettings.json
+++ b/src/EventSourcing.TaskApp/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Couchbase": {
+    "ConnectionString": "couchbase://localhost",
+    "Username": "admin",
+    "Password": "123456"
+  },
   "EventStore": {
     "ConnectionString": "ConnectTo=tcp://localhost:11115;DefaultUserCredentials=admin:changeit;UseSslConnection=true;TargetHost=eventstore.org;ValidateServer=false",
     "ConnectionName": "Task"
