--- a/src/EventSourcing.TaskApp/EventSourcing.TaskApp.csproj
+++ b/src/EventSourcing.TaskApp/EventSourcing.TaskApp.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Couchbase.Extensions.DependencyInjection" Version="3.2.0" />
+    <PackageReference Include="CouchbaseNetClient" Version="3.2.0" />
     <PackageReference Include="EventStore.Client" Version="21.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
