Couchbase implementation completed.

--- a/src/EventSourcing.TaskApp/appsettings.json
+++ b/src/EventSourcing.TaskApp/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Couchbase": {
     "ConnectionString": "couchbase://localhost",
-    "Username": "admin",
-    "Password": "123456"
+    "Username": "biadmin",
+    "Password": "!C0uchb4s3.",
+    "UseSsl": false
   },
   "EventStore": {
     "ConnectionString": "ConnectTo=tcp://localhost:11115;DefaultUserCredentials=admin:changeit;UseSslConnection=true;TargetHost=eventstore.org;ValidateServer=false",
