--- a/src/EventSourcing.TaskApp/EventSourcing.TaskApp.csproj
+++ b/src/EventSourcing.TaskApp/EventSourcing.TaskApp.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Couchbase.Extensions.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="CouchbaseNetClient" Version="3.2.0" />
     <PackageReference Include="EventStore.Client" Version="21.2.0" />
+    <PackageReference Include="Linq2Couchbase" Version="1.4.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
 
